Updated modules and minor style tweaks

--- a/src/posts/vector-apple.mdx
+++ b/src/posts/vector-apple.mdx
@@ -102,7 +102,7 @@ Lastly, if you liked any of the fonts I made when talking at the start, you can 
 <BigLink
   href="/assets/posts/vector-apple/fonts/App Ol' One.otf"
   target="_blank"
-  name="App Ol' One (Apple 1)"
+  name="App Ol' One (Apple 1 font)"
   icon="Download"
   download={true}
 />
